# BotForceOne

./: .gitignore  LICENSE  README.md  example_config.ini  pyproject.toml
src/botforceone/: plugin.py
tests/: test_botforceone.py
