[tool.poetry]
name = "BotForceOne"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "A plugin for the irc3 irc bot library"
authors = ["Aljoscha Vollmerhaus <botforceone@aljoscha.vollmerhaus.net>"]

[tool.poetry.dependencies]
python = "^3.9"
irc3 = "^1.1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
